--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="gameMenu" style="display: none; position: absolute; top: 300px; left:325px; color:white; font-size: 40px;">Paused</div>
     <canvas></canvas>
     <div id="gameDispControls"><b>Movement: Up, Left, Right; Fire: Space; </b>(Beta:: Controller - Dpad: Up, Left, Right; Fire: X/A)</div>
+    <div id="gameDispControls2"><b>Pause: P; Restart: P (on Game Over)</b></div>
     <script src="./index.js"></script>
 </body>
 </html>
